--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,16 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11.toString()
     }
 
 }
 
-publishing {
+/*publishing {
     publications {
         bar(MavenPublication) {
             groupId getGroupId()
@@ -87,7 +87,7 @@ publishing {
         }
     }
 
-}
+}*/
 
 dependencies {
 
@@ -109,7 +109,7 @@ dependencies {
 afterEvaluate {
     publishing {
         publications {
-            mavenRelease(MavenPublication) {
+            release(MavenPublication) {
                 from components.release
                 groupId = getGroupId()
                 artifactId = getArtifactId()
