--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         <activity
             android:name=".ui.LogsActivity"
             android:exported="true" />
+        <activity
+            android:name=".ui.LogDetailActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
